2010-02-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Corrected PPD keyword: It must read
	  "*FoomaticRIPNoPageAccounting" and not "*FoomaticNoPageAccounting".

2010-02-01  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml, driver/lm1100.xml, driver/min12xxw.xml:
	  Added "<packages>" tags for all drivers for which LSB-based binary
	  packages are provided. The new OpenPrinting web site needs these
	  tags.

	* README: Updated the documentation for the <packages> tags
	  telling that they are now required if binary packages of the
	  driver are are provided.

2010-01-18  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Lexmark-C780.xml,
	  db/source/printer/Lexmark-C782.xml,
	  db/source/printer/Lexmark-C930.xml,
	  db/source/printer/Lexmark-C935.xml,
	  db/source/printer/Lexmark-X940e.xml,
	  db/source/printer/Lexmark-X945e.xml: Export of all XML files from
	  the MySQL database for testing of BZR writing from the web
	  app. This reformatted some files which got imported via the BZR
	  repository.

2009-12-26  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Added more instructions for the <packages> tags in driver
	  XML files.

2009-12-18  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C510b.xml, printer/Lexmark-C752b.xml: Moved the
	  PPDs of these printers to the new "Postscript-Lexmark-black-only"
	  driver entry in foomatic-db-nonfree as Lexmark did not re-license
	  them.

2009-12-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C780.xml, printer/Lexmark-C782.xml,
	  printer/Lexmark-C930.xml, printer/Lexmark-C935.xml,
	  printer/Lexmark-X940e.xml, printer/Lexmark-X945e.xml: Added new
	  entries for Lexmark printers.

	* printer/Lexmark-C510.xml, printer/Lexmark-C520.xml,
	  printer/Lexmark-C522.xml, printer/Lexmark-C524.xml,
	  printer/Lexmark-C750.xml, printer/Lexmark-C752.xml,
	  printer/Lexmark-C910.xml, printer/Lexmark-C912.xml,