@@ -35,6 +35,9 @@
       <id>printer/Samsung-CLP-610</id>
     </printer>
     <printer>
+      <id>printer/Samsung-CLP-610ND</id>
+    </printer>
+    <printer>
       <id>printer/Samsung-CLX-2160</id>
     </printer>
     <printer>
