@@ -153,9 +153,6 @@
       <id>printer/Samsung-CLP-550N</id>
     </printer>
     <printer>
-      <id>printer/Samsung-CLP-610ND</id>
-    </printer>
-    <printer>
       <id>printer/Samsung-CLP-650</id>
     </printer>
     <printer>
