@@ -13,17 +13,20 @@
   </mechanism>
   <lang>
     <pcl level="6" />
+    <proprietary />
   </lang>
   <functionality>B</functionality>
-  <driver>pxlcolor</driver>
-  <drivers>
-    <driver>
-      <id>pxlcolor</id>
-    </driver>
-  </drivers>
+  <driver>splix</driver>
   <comments>
     <en>
-      Foomatic entry made by PPDtoXML T/G 0.20 on 2008-09-07
-      </en>
+
+      This printer is a PCL-XL printer, but it is not recommended to
+      use it with a PCL-XL driver like "pxlcolor" due to a firmware
+      bug which causes major color distortions. See &lt;a
+      href="https://bugs.launchpad.net/bugs/505423"&gt;this bug
+      report&lt;/a&gt;. Use drivers for Samsung's SPL-2 language, like
+      SpliX for example.&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
