@@ -1,3 +1,11 @@
+2010-02-09  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/foo2qpdl.xml, driver/pxlcolor.xml, driver/splix.xml,
+	  printer/Samsung-CLP-610ND.xml: The Samsung CLP-610ND is a PCL-XL
+	  printer but does not work with "pxlcolor" due to firmware
+	  bugs. Assigned to SPL-2 drivers and removed "pclcolor"
+	  assignment (Ubuntu bugs #505423, #510832).
+
 2010-02-05  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* README: Corrected PPD keyword: It must read
